[workspace]
members = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["frozolotl <frozolotl@protonmail.com>"]

[package]
name = "typst-ansi-hl-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "typst-ansi-hl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
ansi_colours = "1.2.2"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
once_cell = "1.19.0"
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "regex-fancy"] }
termcolor = "1.4.1"
thiserror = "1.0.57"
two-face = { version = "0.3.0", default-features = false, features = ["syntect-fancy"] }
typst-ansi-hl = { path = "lib" }
typst-syntax = "0.11.0"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
termcolor = { workspace = true }
typst-ansi-hl = { workspace = true }
typst-syntax = { workspace = true }
