[workspace]
members = ["lib"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["frozolotl <frozolotl@protonmail.com>"]
description = "typst-ansi-hl highlights your Typst code using ANSI escape sequences."
license = "EUPL-1.2"
repository = "https://github.com/frozolotl/typst-ansi-hl"
rust-version = "1.80"

[package]
name = "typst-ansi-hl-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "typst-ansi-hl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
ansi_colours = "1.2.3"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "regex-fancy"] }
termcolor = "1.4.1"
thiserror = "1.0.64"
two-face = { version = "0.4.0", default-features = false, features = ["syntect-fancy"] }
typst-ansi-hl = { path = "lib" }
typst-syntax = "0.12.0"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
strip-ansi-escapes = "0.2.0"
termcolor = { workspace = true }
typst-ansi-hl = { workspace = true }
typst-syntax = { workspace = true }
